from django.db import models

from django.contrib.auth.models import User

from offer.models import Job


class Worker(models.Model):
    user = models.OneToOneField(User, on_delete=models.CASCADE)
    first_name = models.CharField(max_length=30)
    last_name = models.CharField(max_length=30)
    email = models.EmailField(unique=True)
    phone_number = models.CharField(max_length=15, blank=True, null=True)
    address = models.TextField(blank=True, null=True)
    date_of_birth = models.DateField(blank=True, null=True)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    def __str__(self):
        return f"{self.first_name} {self.last_name} ({self.user.username})"

    class Meta:
        verbose_name = "Worker"
        verbose_name_plural = "Workers"


class JobRequest(models.Model):
    worker = models.ForeignKey(Worker, on_delete=models.CASCADE)
    job = models.ForeignKey(Job, on_delete=models.CASCADE)
    resume = models.FileField(upload_to='resumes/')
    cover_letter = models.TextField(blank=True, null=True)
    status = models.CharField(
        max_length=20,
        choices=[
            ('pending', 'در انتظار'),
            ('accepted', 'پذیرفته شده'),
            ('rejected', 'رد شده')
        ],
        default='pending'
    )
    applied_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    def __str__(self):
        return f"Job Request by {self.worker} for {self.job}"

    class Meta:
        verbose_name = "Job Request"
        verbose_name_plural = "Job Requests"
        constraints = [
            models.UniqueConstraint(
                fields=['worker', 'job'], name='unique_worker_job_request')
        ]
